Possible fix for cells with wrong height

--- a/timetable.css
+++ b/timetable.css
@@ -8,8 +8,8 @@
 }
 
 .cal-time {
-    max-height: 72px;
-    height: 72px;
+    /*max-height: 72px;
+    height: 72px;*/
     border: 1px solid black;
 }
 
